--- a/index.rmd
+++ b/index.rmd
@@ -1,20 +1,332 @@
 ---
-title: "Data Driven Fantasy Football"
-author: "Martin Sloley"
+title: "Fantasy Football 2024 Analysis"
+author: Andrew Suter
+date: "Last Updated: `r Sys.Date()`"
 output:
-    bookdown::html_document2:
-        toc: true
-        theme: united
+    bookdown::gitbook:
+        highlight: tango
+        config:
+            sharing:
+                facebook: no
+                twitter: yes
+                google: no
+                linkedin: yes
+                weibo: no
+                instagram: no
+                vk: no
+                all: ['twitter', 'linkedin']
+
 ---
-# Links
-- [Github repo](https://github.com/martin-nd/ff_2024)
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = F)
+library(reticulate)
+library(DT)
+```
+# Write-Up {-}
 
-# Introduction
+In this year's analysis we are looking closer at what earns fantasy points, rather than what players win football games. Given that some of the best fantasy players are on some of the worst teams in the NFL, I chose to approach this problem differently this years.
 
-This is a live report / readme of a data driven fantasy football project by myself and a friend of mine. Each post here will detail some of the work that we've done in the past week on this project, or some relevant update (draft / trades / model breakthroughs / etc). If you're following this feel free to check back every few weeks and see what progress we've made, or check back a day or two after a game and see what the results mean analytically.
+To measure for and identify these "fantasy mvps", we are combining historical performance with points share.
 
-On a personal note, this is my first attempt at doing sports analytics, and my sport growing up was swimming, so I'm extremely unfamiliar with both sports data and football in particular, but I'm hoping that what I lack in game knowledge, I make up for in mathematics, coding, and data science expertise. I guess we'll see.
+**Points Share** will be measured by the total yards a player makes in a given game, and dividing it by the net yards the team made that game. This will hopefully help identify those players that are standout MVPs for their given teams, and see the most action.
 
-# Draft Preparation / Pre-Draft Analytics (8-22-24)
+Attributing Points:
 
-In preparation for the draft, we have decided to focus on ranking players for each position based off of the points they could earn us in fantasy. To do this we've come up with our own fantasy version of EPA (expected points added)
+- Touchdown = $7\cdot(\frac{\text{yds for play}}{\text{net yards}})$
+- Field Goal = $3\cdot(\frac{\text{yds for play}}{\text{net yards}})$
+- First Down = $0.7\cdot(\frac{\text{yds for play}}{\text{net yards}})$
+
+```python
+# Weights
+points_attrib = {'First Down': 0.7,
+                 'Touchdown': 7,
+                 'Field Goal': 0.3}
+
+# Defining Net Points Gained
+pbp_data.loc[pbp_data.ydsnet != 0, 'net_points_gained'] = pbp_data.series_points * (pbp_data.yards_gained/pbp_data.ydsnet)
+
+```
+
+
+## EDA {-}
+
+```{python load data, echo=FALSE, warning=FALSE, results='hide'}
+import nfl_data_py as nfl
+import plotly.graph_objects as go
+import pandas as pd
+
+pbp_data = (nfl.import_pbp_data([2018,2019,2020,2021,2022,2023], downcast=True, cache=False)
+                                            [['game_id',
+                                            'play_id',
+                                            'home_team',
+                                            'away_team',
+                                            'season_type',
+                                            'posteam',
+                                            'defteam',
+                                            'touchdown',
+                                            'play_type',
+                                            'passer_player_id',
+                                            'passer_player_name',
+                                            'receiver_player_id',
+                                            'receiver_player_name',
+                                            'rusher_player_id',
+                                            'rusher_player_name',
+                                            'season',
+                                            'home_coach',
+                                            'away_coach',
+                                            'yards_gained',
+                                            'ydsnet',
+                                            'incomplete_pass',
+                                            'interception',
+                                            'sack',
+                                            'series_result',
+                                            'sack_player_id',
+                                            'sack_player_name',
+                                            'fumbled_1_player_id',
+                                            'fumbled_1_player_name']])
+
+points_attrib = {'First Down': 0.7,
+                 'Touchdown': 7,
+                 'Field Goal': 0.3}
+
+pbp_data.loc[:, 'series_points'] = pbp_data.series_result.map(points_attrib)
+pbp_data.loc[pbp_data.ydsnet != 0, 'net_points_gained'] = pbp_data.series_points * \
+ (pbp_data.yards_gained/pbp_data.ydsnet)
+pbp_data.loc[pbp_data.net_points_gained.isna(), 'net_points_gained'] = 0
+```
+```{r display data, echo=F, message=F, warning=F}
+DT::datatable(
+  py$pbp_data[0:9, ], options = list(
+    scrollX=TRUE
+  )
+)
+```
+Above is a preview of the dataset we are using! This is thanks to the [NFL Data Python Package](https://github.com/nflverse/nfl_data_py). Given the timeframe of this project, we will be focusing on the following positions:
+- QBs
+- RBs
+- WRs
+- TEs
+
+Another cleaning measure I used was to focus strictly on regular season games as that is the time frame fantasy football is prevalent.
+```{python initial cleaning, echo=FALSE, warning=FALSE, results='hide'}
+who_cares_the_others = ['QB','RB','WR','TE']
+# 1.
+reg_season = pbp_data.loc[pbp_data.loc[:, 'season_type'] == 'REG']
+# 2.
+rosters = pd.read_csv('Data/2018-2023_rosters.csv')[['season',
+                                                        'position',
+                                                        'player_id']]
+
+# Passing
+passing_df = reg_season.merge(rosters.rename(columns={'player_id': 'passer_player_id',
+                                                      'position': 'passing_position'}), on=['season', 'passer_player_id'], how='left')
+
+passing_df = passing_df.loc[passing_df.passing_position.isin(who_cares_the_others), :]
+
+
+# Receiving
+receiving_df = reg_season.merge(rosters.rename(columns={'player_id': 'receiver_player_id',
+                                                        'position': 'receiving_position'}), on=['season', 'receiver_player_id'], how='left')
+
+receiving_df = receiving_df.loc[receiving_df.receiving_position.isin(who_cares_the_others), :]
+
+# Rushing
+rushing_df = reg_season.merge(rosters.rename(columns={'player_id': 'rusher_player_id',
+                                                      'position': 'rusher_position'}), on=['season', 'rusher_player_id'], how='left')
+
+rushing_df = rushing_df.loc[rushing_df.rusher_position.isin(who_cares_the_others), :]
+```
+
+## Who's Doing What? {-}
+Below represents the type of plays each of the positions above is involved in.
+
+```{python visualize positions, echo=FALSE, warning=FALSE}
+# Passing
+category_counts = passing_df.passing_position.value_counts()
+
+categories = category_counts.index
+counts = category_counts.values
+
+fig = go.Figure(data=[go.Bar(x=categories, y=counts)])
+
+fig.update_layout(
+    title='Passing Plays by Position',
+    xaxis_title='Position',
+    yaxis_title='Count'
+)
+
+# Receiving
+category_counts = receiving_df.receiving_position.value_counts()
+
+categories = category_counts.index
+counts = category_counts.values
+
+fig = go.Figure(data=[go.Bar(x=categories, y=counts)])
+
+fig.update_layout(
+    title='Receiving Plays by Position',
+    xaxis_title='Position',
+    yaxis_title='Count'
+)
+# Rushing
+category_counts = rushing_df.rusher_position.value_counts()
+
+categories = category_counts.index
+counts = category_counts.values
+
+fig = go.Figure(data=[go.Bar(x=categories, y=counts)])
+
+fig.update_layout(
+    title='Rushing Plays by Position',
+    xaxis_title='Position',
+    yaxis_title='Count'
+)
+```
+
+The above graphs show total # of plays executed by play time and position. This includes all plays between 2018 and 2023.
+
+From these graphs we can see that Wide Receivers, Tight Ends and Running Backs can all make multiple types of plays. Therefore we want to make sure we consider all types of plays for all positions.
+
+What's also interesting from this graphic is that running backs are involved in receiving plays almost as much as tight ends!
+
+## Analysis {-}
+```{python setting analysis up, echo=FALSE, warning=FALSE, results='hide'}
+rushing_df_necessary_cols = rushing_df.loc[:, ['game_id','play_id','rusher_player_id','rusher_player_name', 'touchdown',
+                                               'season','yards_gained','series_result','net_points_gained']]
+
+rushing_game_agg = rushing_df_necessary_cols.groupby(by=['rusher_player_id','rusher_player_name','game_id','season']).agg({'yards_gained': 'sum',
+                                                                                                                           'net_points_gained': 'sum',
+                                                                                                                           'touchdown': 'sum'}).reset_index().rename(columns={'yards_gained': 'rushings_yards_gained',
+                                                                                                                                                                              'net_points_gained': 'rushings_net_points_gained',
+                                                                                                                                                                              'touchdown': 'rushings_touchdown'})
+
+passing_df_necessary_cols = passing_df.loc[:, ['game_id','play_id','passer_player_id','passer_player_name', 'touchdown',
+                                               'season','yards_gained','series_result','net_points_gained']]
+passing_game_agg = passing_df_necessary_cols.groupby(by=['passer_player_id','passer_player_name','game_id','season']).agg({'yards_gained': 'sum',
+                                                                                                                           'net_points_gained': 'sum',
+                                                                                                                           'touchdown': 'sum'}).reset_index().rename(columns={'yards_gained': 'passing_yards_gained',
+                                                                                                                                                                              'net_points_gained': 'passing_net_points_gained',
+                                                                                                                                                                              'touchdown': 'passing_touchdown'})
+
+receiving_necessary_cols = receiving_df.loc[:, ['game_id','play_id','receiver_player_id','receiver_player_name', 'touchdown',
+                                                'season','yards_gained','series_result','net_points_gained']]
+
+receiving_game_agg = receiving_necessary_cols.groupby(by=['receiver_player_id','receiver_player_name','game_id','season']).agg({'yards_gained': 'sum',
+                                                                                                                                'net_points_gained': 'sum',
+                                                                                                                                'touchdown': 'sum'}).reset_index().rename(columns={'yards_gained': 'receiving_yards_gained',
+                                                                                                                                                                                   'net_points_gained': 'receiving_net_points_gained',
+                                                                                                                                                                                   'touchdown': 'receiving_touchdown'})
+
+merge_one = rushing_game_agg.rename(columns={'rusher_player_id':'player_id', 'rusher_player_name':'player_name'}).merge(passing_game_agg.rename(columns={'passer_player_id':'player_id', 'passer_player_name':'player_name'}), on=['player_id', 'player_name', 'game_id','season'], how='outer')
+
+merge_two = merge_one.merge(receiving_game_agg.rename(columns={'receiver_player_id':'player_id', 'receiver_player_name':'player_name'}), on=['player_id','player_name','game_id','season'], how='outer').fillna(0)
+```
+
+Given our EDA, we now create an overall dataset that combines total rushing, passing, receiving yards gained, and net points gained for every game and player.
+
+Then we will calculate **Fantasy Football Points** using the following conversions:
+
+- 1pt for every 25 passing yards
+- 1pt for every 10 rushing or receiving yards
+- 6pts for every touchdown
+
+This does not include every aspect of the fantasy football points calculation.
+
+From here we calculate the total number of points generated by each player for each season. Once we have total points by every player, we calculate the weighted average **Fantasy Football Points** for every player in our dataset. The weights are defined as:
+
+- 2018: 0.5
+- 2019: 0.6
+- 2020: 0.7
+- 2021: 0.8
+- 2022: 0.9
+- 2023: 1.0
+
+The reason being is we want to give emphasis to players performing in more recent seasons.
+
+Once we have this calculation for every player in our dataset, we then normalize this to positions. We do this by calculating the average weighted average **Fantasy Football Points** per position. Then we divide our original weighted average by their positional normalizer.
+
+We do this as fantasy football is a game with limited spots in each position. We want to find the best players to fill our entire team with. If we did not normalize our top ranked players would be mostly Quarterbacks.
+```{python manipulations, echo=FALSE, warning=FALSE, results='hide'}
+bring_positions = merge_two.merge(rosters, on=['player_id', 'season'], how='inner')
+filter_positions = bring_positions.loc[bring_positions.loc[:, 'position'].isin(who_cares_the_others), :]
+filter_positions.loc[:, 'ffp'] = (filter_positions['rushings_yards_gained']/10) + \
+                                 (filter_positions['passing_yards_gained']/25) + \
+                                 (filter_positions['receiving_yards_gained']/10) + \
+                                 (filter_positions['rushings_touchdown']*6) + \
+                                 (filter_positions['passing_touchdown']*6) + \
+                                 (filter_positions['receiving_touchdown']*6)
+
+filter_positions = filter_positions.drop(columns=['rushings_yards_gained',
+                                                  'passing_yards_gained',
+                                                  'receiving_yards_gained',
+                                                  'rushings_touchdown',
+                                                  'passing_touchdown',
+                                                  'receiving_touchdown'])
+total_points_year = filter_positions.drop(columns=['game_id', 'player_id']).groupby(by=['player_name', 'position', 'season']).sum().reset_index()
+weights = {
+    2018: 0.5,
+    2019: 0.6,
+    2020: 0.7,
+    2021: 0.8,
+    2022: 0.9,
+    2023: 1.0
+}
+total_points_year.loc[:, 'season_weight'] = total_points_year.loc[:, 'season'].map(weights)
+total_points_year.loc[:, 'weighted_ffps'] = total_points_year.loc[:, 'ffp']*total_points_year.loc[:, 'season_weight']
+
+average_player_agg = total_points_year.groupby(by=['player_name', 'position']).agg(weighted_ffps = ('weighted_ffps', 'mean'),
+                                                                                                rushing_net_points_gained = ('rushings_net_points_gained', 'mean'),
+                                                                                                passing_net_points_gained = ('passing_net_points_gained', 'mean'),
+                                                                                                receiving_net_points_gained = ('receiving_net_points_gained', 'mean')).reset_index()
+average_position_agg = average_player_agg.groupby(by=['position']).agg(weighted_ffps = ('weighted_ffps', 'mean')).reset_index().rename(columns={'weighted_ffps': 'weighted_ffps_position'})
+normalize = average_player_agg.merge(average_position_agg, on=['position'], how='left')
+normalize.loc[:, 'normalized_ffb_points'] = normalize.loc[:, 'weighted_ffps'] / normalize.loc[:, 'weighted_ffps_position']
+```
+## Results {-}
+```{python results, echo=FALSE, warning=FALSE}
+import plotly.express as px
+fig = px.bar(normalize[normalize['position'] == 'QB'].sort_values(by='normalized_ffb_points', ascending=False).head(10), x='player_name', y='normalized_ffb_points')
+fig.update_layout(
+    title='Top 10 QBs',
+    xaxis_title='Player',
+    yaxis_title='Normalized Fantasy Football Points'
+)
+fig = px.bar(normalize[normalize['position'] == 'RB'].sort_values(by='normalized_ffb_points', ascending=False).head(10), x='player_name', y='normalized_ffb_points')
+fig.update_layout(
+    title='Top 10 RBs',
+    xaxis_title='Player',
+    yaxis_title='Normalized Fantasy Football Points'
+)
+fig = px.bar(normalize[normalize['position'] == 'WR'].sort_values(by='normalized_ffb_points', ascending=False).head(10), x='player_name', y='normalized_ffb_points')
+fig.update_layout(
+    title='Top 10 RBs',
+    xaxis_title='Player',
+    yaxis_title='Normalized Fantasy Football Points'
+)
+fig = px.bar(normalize[normalize['position'] == 'TE'].sort_values(by='normalized_ffb_points', ascending=False).head(10), x='player_name', y='normalized_ffb_points')
+fig.update_layout(
+    title='Top 10 TEs',
+    xaxis_title='Player',
+    yaxis_title='Normalized Fantasy Football Points'
+)
+```
+
+Even given my lack of knowledge of the NFL and football, the eye tests atleast passes as I recognize a good amount of these players!
+
+Ultimately, with 0 knowledge of football, I finished 6th in my Fantasy Football league out of 8. I would say this is a win! As last year I finished dead last.
+
+Things to improve upon next year:
+
+- Capture all aspects of how fantasy points are calculated
+- Feedback from my league members is my team is very old.
+  - Focus on perfecting the weighted average and to consider rookies!
+- On draft day, an excel spreadsheet is hard to maneuver when players are being picked left and right
+  - Try to come up with a GUI that allows for easier utilization of the rankings!
+
+Thank you for reading, and see you next year!
+
+## Links {-}
+
+- [Repo](https://github.com/aasuter/fantasy_football_2024)
+- [LinkedIn](https://www.linkedin.com/in/andrew-a-suter/)
+- [Website](https://aasuter.com)
